# AI-TicTacToe

./: .gitignore  CMakeLists.txt  README.md
src/: ai.cpp  ai.h  ai.hpp  board.cpp  board.h  board.hpp  main.cpp  utility.cpp  utility.h  utility.hpp
test/: .gitkeep  CMakeLists.txt  tictactoeTest.cpp
